<resources>
    <string name="app_name">ResiCare</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="residents_list_title">Residentes</string>
    <string name="last_games_list_title">Últimas partidas</string>
    <string name="no_last_games_available_text">No hay partidas disponibles</string>
    <string name="stats_title">Estadísticas</string>
    <string name="no_stats_available_text">No hay estadisticas disponibles</string>
    <string name="featured_title">"Destacados "</string>
    <string name="residence_title">Residencia</string>
    <string name="preferences_title">Preferencias</string>
    <string name="language_title">Idioma</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="activities_list_title">Actividades</string>
    <string name="add_activity_text">Añadir actividad</string>
    <string name="start_activity_text">Iniciar actividad</string>
    <string name="description_title">Descripción</string>
    <string name="information_title">Información</string>
    <string name="date_text">Fecha</string>
    <string name="departure_time_text">Hora de salida</string>
    <string name="total_residents_text">Residentes totales</string>
    <string name="residents_going_text">Residentes que si van</string>
    <string name="residents_not_going_text">Residentes que no van</string>
    <string name="human_assistance_needed_text">Asistencia humana necesaria</string>
    <string name="material_assistance_needed_text">Asistencia material necesaria</string>
    <string name="participants_title">Participantes</string>
    <string name="add_participant_button_text">Añadir participante</string>
    <string name="name_text">Nombre</string>
    <string name="select_date_text">Seleccionar fecha</string>
    <string name="save_text">Guardar</string>
    <string name="write_opinion_text">Escribir opinión</string>
    <string name="surnames_text">Apellidos</string>
    <string name="date_of_birth_text">Fecha de nacimiento (YYYY-MM-DD)</string>
    <string name="identification_document_text">Documento de identidad</string>
    <string name="year_of_document_validity_text">Año de validez del documento (ej. 2025)</string>
    <string name="month_of_document_validity_text">Mes de validez del documento (1-12)</string>
    <string name="email_family_member_text">Correo de familiar</string>
    <string name="total_games_played_text">Partidas jugadas</string>
    <string name="top_player_text">Top jugador</string>
    <string name="games_played_text">Partidas</string>
    <string name="no_games_played_text">No hay partidas disponibles</string>
    <string name="duration_text">Duración</string>
    <string name="fails_text">Fallos</string>
    <string name="observations_title">Observación</string>
    <string name="games_title">Juegos</string>
    <string name="no_games_text">No hay juegos disponibles</string>
    <string name="no_residents_text">No hay residentes disponibles</string>
    <string name="add_resident_text">Añadir residente</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="email_text">Correo electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="remember_password_text">Recordar contraseña</string>
    <string name="activity_text">Actividad</string>
    <string name="pre_opinion_title">Opinión previa</string>
    <string name="post_opinion_title">Opinión posterior</string>
    <string name="residents_taken_down_title">Residentes dados de baja</string>
    <string name="select_language_tile">Selecciona un idioma</string>
    <string name="es_language_text">Español</string>
    <string name="en_language_text">Ingles</string>
    <string name="va_language_text">Valenciano</string>
    <string name="confirm_logout_message">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="accept_text">Aceptar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="close_activity_title">Cerrar actividad</string>
    <string name="close_activity_message">No se podra cambiar el estado de la actividad una vez cerrada. ¿Desea continuar?</string>
    <string name="finish_activity_text">Finalizar actividad</string>
    <string name="activity_finished_text">Actividad finalizada</string>
    <string name="delete_text">Eliminar</string>
    <string name="most_played_filter_text">Más jugado en la ultima semana</string>
    <string name="filter_games_title">Filtrar juegos</string>
    <string name="date_of_birth_filter_text">Fecha de nacimiento</string>
    <string name="resident_name_a_z_filter_text">Nombre residente [A-Z]</string>
    <string name="resident_name_z_a_filter_text">Nombre residente [Z-A]</string>
    <string name="game_name_a_z_filter_text">Nombre juego [A-Z]</string>
    <string name="game_name_z_a_filter_text">Nombre juego [Z-A]</string>
    <string name="first_to_last_filter_text">De primera a última</string>
    <string name="last_to_first_filter_text">De última a primera</string>
    <string name="filter_last_games_title">Filtrar últimas partidas</string>
    <string name="filter_residents_title">Filtrar residentes</string>
    <string name="status_open_filter_text">Estado [ABIERTO]</string>
    <string name="status_closed_filter_text">Estado [CERRADO]</string>
    <string name="status_on_going_filter_text">Estado [EN CURSO]</string>
    <string name="status_finished_filter_text">Estado [FINALIZADO]</string>
    <string name="activity_date_filter_text">Fecha de salida</string>
    <string name="filter_activities_title">Filtrar actividades</string>
    <string name="activity_title">Actividad</string>
    <string name="account_detail">Cuenta</string>
    <string name="level_text">Nivel</string>
    <string name="level1_text">FACIL</string>
    <string name="level2_text">MEDIO</string>
    <string name="level3_text">DIFICIL</string>
    <string name="select_datetime_text">Seleccionar fecha y hora</string>
    <string name="result_text">Resultado</string>
    <string name="lost_text">PERDIDA</string>
    <string name="won_text">GANADA</string>
    <string name="no_observation_text">El usuario encargado no ha añadido ninguna observación</string>

</resources>