<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#CCCCCC">

    <EditText
        android:id="@+id/add_activity_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        android:textColor="#324F5E"
        android:textColorLink="#6CADFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_activity_description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="top|start"
        android:hint="@string/description_title"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textColor="#324F5E"
        android:textColorLink="#6CADFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_activity_name_input" />

    <Button
        android:id="@+id/buttonFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00AF4848"
        android:text="@string/select_datetime_text"
        android:textAlignment="viewStart"
        android:textColor="#324F5E"
        android:textColorLink="#6CADFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_activity_description_input" />

    <Button
        android:id="@+id/save_new_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#324F5E"
        android:text="@string/save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonFecha"
        app:layout_constraintTop_toBottomOf="@id/buttonFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>
